--- a/UserClient/UserClient.csproj
+++ b/UserClient/UserClient.csproj
@@ -67,6 +67,12 @@
     <Compile Include="frmRegister.Designer.cs">
       <DependentUpon>frmRegister.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmServerConfigure.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmServerConfigure.Designer.cs">
+      <DependentUpon>frmServerConfigure.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmFunctions.resx">
@@ -77,6 +83,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmRegister.resx">
       <DependentUpon>frmRegister.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmServerConfigure.resx">
+      <DependentUpon>frmServerConfigure.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
